gccida/c1/force_to_mode
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7104:28: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  force_to_mode( rtx x, machine_mode mode, unsigned __int64 mask, rtx reg, int just_select) 
                           ^
                           enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7108:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v8; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7115:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7121:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // r10d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7134:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v34; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7142:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v42; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7145:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v45; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7164:4: error: expected ';' after expression
rtx v64; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7164:5: error: use of undeclared identifier 'v64'
rtx v64; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7185:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v85; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7190:4: error: expected ';' after expression
rtx v90; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7190:5: error: use of undeclared identifier 'v90'
rtx v90; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7198:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v98; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7221:4: error: expected ';' after expression
rtx v121; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7221:5: error: use of undeclared identifier 'v121'
rtx v121; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7223:4: error: expected ';' after expression
rtx v123; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7223:5: error: use of undeclared identifier 'v123'
rtx v123; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7227:4: error: expected ';' after expression
rtx v127; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/combine.c:7227:5: error: use of undeclared identifier 'v127'
rtx v127; // r14 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/force_to_mode/src/obj/combine.o] Error 1
